syntax = "proto3";

package code;

option go_package = ".;codepb";

message SolanaAccountId {
    bytes value = 1;
}

message ExchangeData {
    string currency = 1;
    double exchange_rate = 2;
    double native_amount = 3;
    uint64 quarks = 4;
}

message ExchangeDataWithoutRate {
    string currency = 1;
    double native_amount = 2;
}

message RequestToReceiveBill {
    SolanaAccountId requestor_account = 1;
    oneof exchange_data {
        ExchangeData            exact = 2;
        ExchangeDataWithoutRate partial = 3;
    }
}

message Envelope {
    oneof kind {
        RequestToReceiveBill request_to_receive_bill  = 5;
    }
}
